redirect check createsweetplace

--- a/www/css/blue/css/kiosk.css
+++ b/www/css/blue/css/kiosk.css
@@ -1220,7 +1220,7 @@ This is sample of the dropdown div. It will make it easy to set scc of div
 */
 .map-holder {
     padding: 0;
-    width: 100%;
+    width: 1000px;
     height: 900px;
    /* margin-top: -123px;*/
 }
