--- a/www/views/auth/new.html
+++ b/www/views/auth/new.html
@@ -23,7 +23,7 @@
                     <span class="connect-title">Connect with ...</span>
                     <ul class="social-icons">
                         <!--<li><a class="facebook" alt="facebook" ng-click="facebookLogin()">facebook</a></li>-->
-                        <li><a class="facebook" alt="facebook" ng-click="capturePhoto()">facebook</a></li>
+                        <li><a class="facebook" alt="facebook" ng-click="phonegapFBLogin()">facebook</a></li>
                         <!--<li><a class="google">google</a></li>
                         <li><a class="linkden">linkden</a></li>
                         <li><a class="twitter">twitter</a></li>-->
