--- a/www/views/kiosk/register.html
+++ b/www/views/kiosk/register.html
@@ -8,8 +8,8 @@
                 <fieldset>
                     <div class="inputfile-holder" ng-controller="CameraCtrl">
                         <!--<input type="file" name="#" class="fileholder-btn" size="0">-->
-                        <sweetfileselect align="center" showprogress="util.showProgress" swfile="user.avatarUrl" attr1="50" class="fileholder-btn">
-                        </sweetfileselect>
+                        <!--<sweetfileselect align="center" showprogress="util.showProgress" swfile="user.avatarUrl" attr1="50" class="fileholder-btn">
+                        </sweetfileselect>-->
                         <span class="profile-img-main heart-big-profile">
                             <img src="images/capture-img.png" ng-click="capturePhoto()" alt="Profile Picture"  ng-show='!userAvatar'>
                             <img  ng-show='userAvatar' ng-src="{{userAvatar}}" class="imgavatar"/>
